# agentBrain

./: .cursorrules  .gitignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  RELEASE_NOTES.md  SECURITY.md  setup.sh
.claude/: README.md
.githooks/: pre-commit  pre-push
.github/: README.md  copilot-instructions.md
.obsidian/: app.json  appearance.json  core-plugins.json
backlog/: README.md
daily-notes/: README.md
docs/: README.md  development.md  shared-vault.md
learnings/: README.md  _example.md  patterns.md  troubleshooting.md
projects/: README.md  index.md
scripts/: README.md  active-space.sh  addons.sh  agentbrain-pointer.sh  bootstrap-macos.sh  brain-update.sh  brain.sh  build-space-map.sh  capture-findings.sh  channel.sh  check-addons.sh  check-agentbrain-local.sh  check-agentbrain-shared.sh  check-agnostic.sh  check-anchors.sh  check-architecture.sh  check-brain-hide-forget.sh  check-brain-review.sh  check-client-pointers.sh  check-doctor.sh  check-english-sources.sh  check-events.sh  check-explainers.sh  check-frontmatter.sh  check-launchd-templates.sh  check-learnings-structure.sh  check-license.sh  check-lifecycle-scripts.sh  check-links.sh  check-local-content.sh  check-node-bootstrap.sh  check-path-naming.sh  check-pi-extension-types.sh  check-pi-lens.sh  check-preference-scopes.sh  check-project-status-enum.sh  check-readmes.sh  check-release-published.sh  (+96 more)
system/skills/scanman/rust-impl/: Cargo.toml
system/skills/scanman/rust-impl/src/: frontmatter.rs  init.rs  main.rs  scan.rs  templates.rs  uuid5.rs  validate.rs
(+386 files in other folders)
