[package]
name = "scanman"
version = "0.6.1"
edition = "2021"
description = "Agent-agnostic repo-distill skill — Rust re-implementation for differential testing"
license = "Apache-2.0"

[[bin]]
name = "scanman"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
uuid = { version = "1", features = ["v5"] }
anyhow = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
